# use-cases

engineering-release-agent/: .env.example  .env.test  .gitignore  README.md  pyproject.toml
engineering-release-agent/data/evals/: golden_dataset.json
engineering-release-agent/src/: __init__.py  cli.py  config.py
engineering-release-agent/src/agent/: graph.py  hitl.py  nodes.py  prompts.py
engineering-release-agent/src/api/: main.py
engineering-release-agent/src/api/routes/: analyze.py  review.py  webhook.py
engineering-release-agent/src/audit/: __init__.py  init_db.py  logger.py
engineering-release-agent/src/evals/: __init__.py  harness.py
engineering-release-agent/src/ingestion/: __init__.py  chunker.py  embedder.py  git_parser.py
engineering-release-agent/src/models/: agent_state.py  pr_analysis.py
engineering-release-agent/src/rag/: __init__.py  pipeline.py  store.py
engineering-release-agent/src/tools/: __init__.py  code_linter.py  diff_scorer.py  github_pr.py  jira_fetcher.py  rag_search.py
engineering-release-agent/tests/: conftest.py  test_agent.py  test_api.py  test_embedder.py  test_extended.py  test_hitl.py  test_ingestion.py  test_models_and_config.py  test_rag.py  test_tools.py
