[project]
name = "engineering-release-agent"
version = "0.1.0"
description = "AI agent that analyses PR diffs and produces actionable release feedback"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langchain-ollama>=0.2",
    "langchain-chroma>=0.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "chromadb>=0.5",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "PyGithub>=2.3",
    "jira>=3.8",
    "tiktoken>=0.7",
    "structlog>=24.4",
    "tenacity>=8.5",
    "pylint>=3.2",
    "pyflakes>=3.2",
    "rich>=13.7",
    "typer>=0.12",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "faker>=26.0",
]

[project.scripts]
release-agent = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
